# Algorithms-for-Genomic-Compression

./: .gitignore  CMakeLists.txt  README.md  clean_fasta.sh  install.sh  vcpkg.json
data/: datatest.txt
include/: ArgumentParser.h  CLI.h  CLIManager.h  CLIMenu.h  CompressCommand.h  CompressionMetrics.h  DecompressCommand.h  FileValidator.h  HuffmanGenome.h  RLEGenome.h  application.h  baseCommand.h  combinedCompressor.h  compressionException.h  compressor.h  compressorFactory.h  huffman.h  huffmanCompressor.h  huffmanGenetic.h  logger.h
src/: ArgumentParser.cpp  CLI.cpp  CLIManager.cpp  CLIMenu.cpp  CompressCommand.cpp  CompressorFactory.cpp  DecompressCommand.cpp  RLECompression.cpp  application.cpp  argument_parser.cpp  combinedCompressor.cpp  compressionMetrics.cpp  genome_data.txt  genome_data_combined_decoded.txt  huffman.cpp  huffmanCompressor.cpp  huffmanGenetic.cpp  huffmanGenome.cpp  huffman_compressor.cpp  huffman_genome.cpp  logger.cpp  main.cpp  rle_compression.cpp
tests/: test_RLEcompression.cpp  test_combined_compressor.cpp  test_huffmanGenetic.cpp  test_huffman_compressor.cpp  test_huffmangenome_compresor.cpp  test_simple.cpp
