# cmake_minimum_required(VERSION 3.14)

# # Project Name and Version
# project(Optimized-Algorithms-for-Genomic-Compression VERSION 1.0 LANGUAGES CXX)

# # Set C++ Standard
# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)

# # Collect all source files in src/ and its subdirectories
# file(GLOB_RECURSE SRC_FILES "src/*.cpp")

# # Define the executable
# add_executable(DNA_Compression_Executable ${SRC_FILES})

# # Include directories for this target
# target_include_directories(DNA_Compression_Executable PRIVATE ${PROJECT_SOURCE_DIR}/include)

# # (Optional) Link additional libraries if needed
# # target_link_libraries(DNA_Compression_Executable PRIVATE <libraries>)

